--- a/notebooks/Vectorizing_Text.ipynb
+++ b/notebooks/Vectorizing_Text.ipynb
@@ -1,10 +1,114 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vectorizing Text Tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This tutorial is adapted from the [gensim](https://radimrehurek.com/gensim/tut1.html) tutorial. THe goal is to provide an overview of how to convert a corpora of text (i.e. \"a large and structured set of texts\" [Wikipedia](https://en.wikipedia.org/wiki/Text_corpus)) into a vector-like space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Environment Set-up"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# import needed modules\n",
+    "import logging\n",
+    "import os\n",
+    "import tempfile\n",
+    "from gensim import corpora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder \"/var/folders/bh/v3yn507s50zct26_45vmwnvm0000gq/T\" will be used to save temporary dictionary and corpus.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize logger\n",
+    "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n",
+    "\n",
+    "# create a temp directory to store logging info\n",
+    "TEMP_FOLDER = tempfile.gettempdir()\n",
+    "print('Folder \"{}\" will be used to save temporary dictionary and corpus.'.format(TEMP_FOLDER))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Going from Strings to Words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will start by defining a small corpus. In this exmaple, we create a corpus of 9 documents, where each document contains a single sentence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Human machine interface for lab abc computer applications', 'A survey of user opinion of computer system response time', 'The EPS user interface management system', 'System and human system engineering testing of EPS', 'Relation of user perceived response time to error measurement', 'The generation of random binary unordered trees', 'The intersection graph of paths in trees', 'Graph minors IV Widths of trees and well quasi ordering', 'Graph minors A survey']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define corpus\n",
+    "\n",
+    "documents = [\"Human machine interface for lab abc computer applications\",\n",
+    "             \"A survey of user opinion of computer system response time\",\n",
+    "             \"The EPS user interface management system\",\n",
+    "             \"System and human system engineering testing of EPS\",              \n",
+    "             \"Relation of user perceived response time to error measurement\",\n",
+    "             \"The generation of random binary unordered trees\",\n",
+    "             \"The intersection graph of paths in trees\",\n",
+    "             \"Graph minors IV Widths of trees and well quasi ordering\",\n",
+    "             \"Graph minors A survey\"]\n",
+    "\n",
+    "print(documents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
